fix: increase photo height for better visibility

--- a/docs/index.css
+++ b/docs/index.css
@@ -32,7 +32,7 @@
     margin-right:10px;
 }
 .photo{
-    height:200px;
+    height:300px;
     width:200px;
     border-radius:80px;
 }
